Fix standard modal z-index

--- a/src/Pum/Bundle/AppBundle/Resources/assets/sass/components/_pum.modal.scss
+++ b/src/Pum/Bundle/AppBundle/Resources/assets/sass/components/_pum.modal.scss
@@ -28,6 +28,10 @@
     bottom: 0;
 }
 
+.modal-dialog {
+    z-index: 1040;
+}
+
 .modal.modal-panel {
     .modal-backdrop {
         opacity: .1;
